compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__const_annotation_wrong_2.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1415
expression: "pub const numbers: List<Int> = [1, 2, 2.3]"
---
----- SOURCE CODE
pub const numbers: List<Int> = [1, 2, 2.3]

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:39
  │
1 │ pub const numbers: List<Int> = [1, 2, 2.3]
  │                                       ^^^

Expected type:

    Int

Found type:

    Float
